fix(toggle): update disabled toggle switch colors for light and dark modes

--- a/packages/core/src/components/toggle/toggle-vars.scss
+++ b/packages/core/src/components/toggle/toggle-vars.scss
@@ -1,7 +1,7 @@
 :root,
 .tds-mode-light {
   --tds-toggle-switch: var(--tds-white);
-  --tds-toggle-switch-disabled: var(--tds-grey-250);
+  --tds-toggle-switch-disabled: var(--tds-grey-300);
   --tds-toggle-headline: var(--tds-grey-950);
   --tds-toggle-headline-disabled: var(--tds-grey-250);
   --tds-toggle-on-slider: var(--tds-green-300);
@@ -23,7 +23,7 @@
 
 .tds-mode-dark {
   --tds-toggle-switch: var(--tds-white);
-  --tds-toggle-switch-disabled: var(--tds-grey-500);
+  --tds-toggle-switch-disabled: var(--tds-grey-350);
   --tds-toggle-headline: var(--tds-grey-50);
   --tds-toggle-headline-disabled: var(--tds-grey-500);
   --tds-toggle-on-slider: var(--tds-green-300);
@@ -33,7 +33,7 @@
   --tds-toggle-on-border-focus: var(--tds-white);
   --tds-toggle-border-outline: var(--tds-blue-300);
   --tds-toggle-on-slider-disabled: var(--tds-grey-600);
-  --tds-toggle-slider-disabled: var(--tds-grey-600);
+  --tds-toggle-slider-disabled: var(--tds-grey-650);
   --tds-toggle-label-color: var(--tds-grey-50);
   --tds-toggle-label-color-disabled: var(--tds-grey-500);
   --tds-toggle-off-slider: var(--tds-grey-350);
